k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyundai-sales-backend
  labels:
    app: hyundai-sales
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hyundai-sales
      tier: backend
  template:
    metadata:
      labels:
        app: hyundai-sales
        tier: backend
    spec:
      containers:
        - name: hyundai-sales-backend
          image: marouanedbibih/hyundai-sales-backend:latest
          ports:
            - containerPort: 8082
              name: spring
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10
